# The-Loop---Transaction-Reconciliation-Agent

./: .env.example  .gitignore  CASSETTE_DAY.md  DEEP_DIVE_PREP.md  LOOM_DAY.md  LOOM_SCRIPT.md  Makefile  README.md  grabon_challenge.md  pyproject.toml
.github/workflows/: eval.yml
docs/: architecture.md  model_routing.md  recovery_strategies.md
docs/superpowers/: brainstorming_log.md
evals/: compare.py  compare_baseline.py  latest_eval_results.md  runner.py  verify.py
evals/baselines/: main.json
evals/cassettes/: budget_01_token_ceiling.jsonl  budget_02_walltime_ceiling.jsonl  happy_01_clean_reconciliation.jsonl  happy_02_minor_timezone.jsonl  happy_03_encoding.jsonl  happy_04_duplicates.jsonl  happy_05_value_mismatch.jsonl  impossible_01_corrupted_source.jsonl  impossible_02_irreconcilable.jsonl  recovery_01_api_429.jsonl  recovery_02_malformed_csv.jsonl  recovery_03_tool_disabled.jsonl
evals/scenarios/: base.py  budget_01_token_ceiling.py  budget_02_walltime_ceiling.py  happy_01_clean_reconciliation.py  happy_02_minor_timezone.py  happy_03_encoding.py  happy_04_duplicates.py  happy_05_value_mismatch.py  impossible_01_corrupted_source.py  impossible_02_irreconcilable.py  recovery_01_api_429.py  recovery_02_malformed_csv.py  recovery_03_tool_disabled.py
src/recon_agent/: __main__.py
tests/integration/: test_loop_budget.py  test_loop_recovery.py  test_loop_smoke.py
tests/unit/: test_apply_correction.py  test_budget.py  test_cassettes.py  test_classifier.py  test_classify_discrepancy.py  test_compare_baseline.py  test_comparison.py  test_fetch_api.py  (+14 more)
(+43 files in other folders)
