[project]
name = "recon-agent"
version = "0.1.0"
description = "Transaction Reconciliation Agent — GrabOn AI Labs Challenge 02"
requires-python = ">=3.11"
authors = [{name = "Candidate"}]
license = {text = "MIT"}
readme = "README.md"

dependencies = [
    "google-genai>=1.0",
    "openai>=1.50",
    "pydantic>=2.7",
    "structlog>=24.1",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "chardet>=5.2",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
recon = "recon_agent.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/recon_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
